Update product page: full image, floating price badge

--- a/product.html
+++ b/product.html
@@ -4,86 +4,73 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Product Page</title>
-
 <style>
-/* Base Styles */
-body { font-family: "Helvetica Neue", Arial, sans-serif; margin:0; background:#fafafa; color:#333; }
+  /* Base Styles */
+  body { font-family: "Helvetica Neue", Arial, sans-serif; margin:0; background:#fafafa; color:#333; }
 
-/* Header */
-.header { position: sticky; top:0; background:#fff; padding:12px 20px; display:flex; align-items:center; justify-content:space-between; box-shadow:0 2px 6px rgba(0,0,0,0.08); z-index:1000; }
-.logo { font-weight:bold; font-size:1.2rem; text-decoration:none; color:#222; }
-.cart { position:relative; font-size:1.4rem; text-decoration:none; color:#444; }
-#cart-count { position:absolute; top:-8px; right:-10px; background:#f1641e; color:#fff; border-radius:50%; padding:2px 7px; font-size:12px; font-weight:bold; }
+  /* Header */
+  .header { position: sticky; top:0; background:#fff; padding:12px 20px; display:flex; align-items:center; justify-content:space-between; box-shadow:0 2px 6px rgba(0,0,0,0.08); z-index:1000; }
+  .logo { font-weight:bold; font-size:1.2rem; text-decoration:none; color:#222; }
+  .cart { position:relative; font-size:1.4rem; text-decoration:none; color:#444; }
+  #cart-count { position:absolute; top:-8px; right:-10px; background:#f1641e; color:#fff; border-radius:50%; padding:2px 7px; font-size:12px; font-weight:bold; }
 
-/* Card Styles from Uiverse.io */
-.card {
-  --accent-color: #ffd426;
-  position: relative;
-  width: 240px;
-  background: white;
-  border-radius: 1rem;
-  padding: 0.3rem;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 50px 30px -20px;
-  transition: all 0.5s ease-in-out;
-  margin: 40px auto;
-}
+  /* Card Styles (Uiverse.io) */
+  .card {
+    --accent-color: #ffd426;
+    position: relative;
+    width: 240px;
+    background: white;
+    border-radius: 1rem;
+    padding: 0.3rem;
+    box-shadow: rgba(100,100,111,0.2) 0px 50px 30px -20px;
+    transition: all 0.5s ease-in-out;
+    margin: 20px auto;
+  }
 
-.card .image-container {
-  position: relative;
-  width: 100%;
-  height: 240px;
-  border-radius: 0.7rem;
-  border-top-right-radius: 4rem;
-  margin-bottom: 1rem;
-  overflow: hidden;
-}
+  .card .image-container {
+    position: relative;
+    width: 100%;
+    border-radius: 0.7rem;
+    border-top-right-radius: 4rem;
+    margin-bottom: 1rem;
+    overflow: visible; /* allow price to float outside */
+  }
 
-.card .image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: inherit;
-  display: block;
-}
+  .card .image-container img {
+    width: 100%;
+    height: auto; /* natural height, no cropping */
+    display: block;
+    border-radius: inherit;
+  }
 
-.card .image-container .price {
-  position: absolute;
-  right: 0.7rem;
-  bottom: -1rem;
-  background: white;
-  color: var(--accent-color);
-  font-weight: 900;
-  font-size: 0.9rem;
-  padding: 0.5rem;
-  border-radius: 1rem 1rem 2rem 2rem;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 15px 0px;
-}
+  /* Floating price badge */
+  .card .image-container .price {
+    position: absolute;
+    right: 0.7rem;
+    bottom: -0.8rem; /* float down over card */
+    background: white;
+    color: var(--accent-color);
+    font-weight: 900;
+    font-size: 0.9rem;
+    padding: 0.5rem;
+    border-radius: 1rem 1rem 2rem 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 15px 0px;
+    z-index: 10;
+  }
 
-.card .content { padding:0 0.8rem; margin-bottom:1rem; }
-.card .content .product-name { font-weight:700; color:#666666; font-size:0.8rem; margin-bottom:0.5rem; }
-.card .content p { font-size:0.75rem; color:#555; margin-bottom:0.5rem; }
+  .card .content { padding:0 0.8rem; margin-bottom:1rem; }
+  .card .content .product-name { font-weight:700; color:#666; font-size:0.7rem; margin-bottom:1rem; }
+  .card .button-container { display:flex; gap:0.3rem; margin-bottom:10px; }
+  .card .button-container .button { border-radius:1.4rem 1.4rem 0.7rem 0.7rem; border:none; padding:0.5rem 0; background:var(--accent-color); color:white; font-weight:900; cursor:pointer; }
+  .card .button-container .button:hover { background: orangered; }
+  .card .button-container .buy-button { flex:auto; }
+  .card .button-container .cart-button { display:grid; place-content:center; width:50px; }
 
-.card .button-container { display:flex; gap:0.3rem; margin-bottom:10px; }
-.card .button-container .button { border-radius:1.4rem 1.4rem 0.7rem 0.7rem; border:none; padding:0.5rem 0; background:var(--accent-color); color:white; font-weight:900; cursor:pointer; }
-.card .button-container .button:hover { background: orangered; }
-.card .button-container .buy-button { flex:auto; }
-.card .button-container .cart-button { display:grid; place-content:center; width:50px; }
-
-.card:hover { transform: scale(1.03); }
-
-@keyframes bouncing {
-  from, to { transform: scale(1, 1); }
-  25% { transform: scale(1.5, 2.1); }
-  50% { transform: scale(2.1, 1.5); }
-  75% { transform: scale(1.5, 2.05); }
-}
-
-@media (max-width:480px){
-  .card { width: 90%; }
-}
+  @media (max-width:480px){
+    .card { width: 90%; }
+  }
 </style>
 </head>
-
 <body>
 
 <header class="header">
@@ -92,13 +79,13 @@ body { font-family: "Helvetica Neue", Arial, sans-serif; margin:0; background:#f
 </header>
 
 <div class="product-container" id="product-container">
-  <!-- Product will render here -->
+  <!-- Product content will be rendered here -->
 </div>
 
 <script>
 let allProducts = [];
 
-// Load products.json
+// Load products.json to get product info
 fetch('products.json')
   .then(res => res.json())
   .then(products => {
@@ -125,34 +112,37 @@ function renderProduct() {
       </div>
       <div class="content">
         <div class="product-name">${product.name}</div>
-        <p>${product.description || 'No description available.'}</p>
         <div class="button-container">
           <button class="button buy-button" onclick="buyNow('${product.id}')">Buy Now</button>
           <button class="button cart-button" onclick="addToCart('${product.id}')">🛒</button>
         </div>
+        <p>${product.description || 'No description available.'}</p>
       </div>
     </div>
   `;
 }
 
-// Cart functions
+// Add to cart
 function addToCart(productId){
   const product = allProducts.find(p => p.id === productId);
   if(!product) return;
+
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   const existing = cart.find(i => i.id === productId);
   if(existing) existing.quantity++;
   else cart.push({id: product.id, name: product.name, price: product.price/100, quantity:1, image: product.image});
   localStorage.setItem("cart", JSON.stringify(cart));
-  updateCartCount();
   alert(`${product.name} added to cart!`);
+  updateCartCount();
 }
 
+// Buy now
 function buyNow(productId){
   addToCart(productId);
   window.location.href = 'cart.html';
 }
 
+// Update cart counter
 function updateCartCount(){
   const cart = JSON.parse(localStorage.getItem("cart")) || [];
   const total = cart.reduce((sum,i) => sum + i.quantity, 0);
