--- a/cart.html
+++ b/cart.html
@@ -6,28 +6,87 @@
 <title>Cart</title>
 <style>
 body { 
-    font-family: "Helvetica Neue", Arial, sans-serif; 
-    margin: 0; 
-    background: #fafafa; 
-    color: #333;
+  font-family: "Helvetica Neue", Arial, sans-serif; 
+  margin: 0; 
+  background: #fafafa; 
+  color: #333;
 }
 
 /* 🔝 Sticky Header */
 .header { 
-    position: sticky; top: 0; background: #fff; padding: 12px 20px; 
-    display: flex; align-items: center; justify-content: space-between; 
-    box-shadow: 0 2px 6px rgba(0,0,0,0.08); z-index: 1000; 
+  position: sticky; 
+  top: 0; 
+  background: #fff; 
+  padding: 12px 20px; 
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between; 
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08); 
+  z-index: 1000; 
 }
-.logo { font-weight: bold; font-size: 1.2rem; text-decoration: none; color: #222; }
-.cart { position: relative; font-size: 1.4rem; text-decoration: none; color: #444; }
-#cart-count { position: absolute; top: -8px; right: -10px; background: #f1641e; color: #fff; border-radius: 50%; padding: 2px 7px; font-size: 12px; font-weight: bold; }
 
-table { width: 100%; border-collapse: collapse; margin-top: 10px; table-layout: fixed; }
-th, td { padding: 6px; border-bottom: 1px solid #ddd; text-align: center; word-wrap: break-word; font-size: 0.85rem; }
-.quantity-btn { padding: 3px 6px; background: #f1641e; color: #fff; border: none; border-radius: 4px; cursor: pointer; font-size: 0.8rem; }
-.remove-btn { cursor: pointer; color: #f1641e; font-weight: bold; font-size: 0.85rem; }
-.total { text-align: right; font-weight: bold; margin-top: 10px; font-size: 0.9rem; }
-.checkout-btn {
+/* Restore desktop font for logo */
+.logo { 
+  font-family: "Helvetica Neue", Arial, sans-serif; /* original font */
+  font-weight: bold; 
+  font-size: 1.5rem; /* original desktop size */
+  text-decoration: none; 
+  color: #222; 
+}
+
+.cart { 
+  position: relative; 
+  font-size: 1.4rem; 
+  text-decoration: none; 
+  color: #444; 
+}
+
+#cart-count { 
+  position: absolute; 
+  top: -8px; 
+  right: -10px; 
+  background: #f1641e; 
+  color: #fff; 
+  border-radius: 50%; 
+  padding: 2px 7px; 
+  font-size: 12px; 
+  font-weight: bold; 
+}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px;
+}
+
+th,td{
+  padding:8px;
+  border-bottom:1px solid #ddd;
+  text-align:center;
+}
+
+.quantity-btn{
+  padding:4px 8px;
+  background:#f1641e;
+  color:#fff;
+  border:none;
+  border-radius:4px;
+  cursor:pointer;
+}
+
+.remove-btn{
+  cursor:pointer;
+  color:#f1641e;
+  font-weight:bold;
+}
+
+.total{
+  text-align:right;
+  font-weight:bold;
+  margin-top:10px;
+}
+
+.checkout-btn{
   background-color:#6772e5;
   color:white;
   padding:10px 20px;
@@ -40,19 +99,32 @@ th, td { padding: 6px; border-bottom: 1px solid #ddd; text-align: center; word-w
   margin-left:auto;
 }
 
-/* ⚡ Mobile adjustments */
-@media (max-width: 600px) {
-    th, td { font-size: 0.7rem; padding: 4px; }
-    td img { width: 35px; height: 35px; }
-    .quantity-btn { padding: 2px 4px; font-size: 0.7rem; }
-    .checkout-btn { font-size: 14px; padding: 8px 16px; }
+/* Mobile tweaks only */
+@media (max-width:480px){
+  table, thead, tbody, th, td, tr { 
+    display: block; 
+    width: 100%;
+  }
+  thead tr { display: none; }
+  td {
+    text-align: right;
+    padding-left: 50%;
+    position: relative;
+  }
+  td::before {
+    content: attr(data-label);
+    position: absolute;
+    left: 10px;
+    width: 45%;
+    text-align: left;
+    font-weight: bold;
+  }
 }
 </style>
 </head>
 <body>
-
 <header class="header">
-  <a href="index.html">DjsDopeDesigns</a>
+  <a href="index.html" class="logo">DjsDopeDesigns</a>
   <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
 </header>
 
@@ -60,7 +132,14 @@ th, td { padding: 6px; border-bottom: 1px solid #ddd; text-align: center; word-w
   <h1>Your Cart</h1>
   <table id="cart-table">
     <thead>
-      <tr><th>Product</th><th>Name</th><th>Price</th><th>Qty</th><th>Subtotal</th><th>Remove</th></tr>
+      <tr>
+        <th>Product</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Subtotal</th>
+        <th>Remove</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
@@ -84,15 +163,15 @@ function renderCart(){
     const subtotal = item.price*item.quantity; total+=subtotal;
     const tr=document.createElement("tr");
     tr.innerHTML=`
-      <td><img src="${item.image}" alt="${item.name}"></td>
-      <td>${item.name}</td>
-      <td>$${item.price.toFixed(2)}</td>
-      <td>
+      <td data-label="Product"><img src="${item.image}" style="width:50px;height:50px;"></td>
+      <td data-label="Name">${item.name}</td>
+      <td data-label="Price">$${item.price.toFixed(2)}</td>
+      <td data-label="Quantity">
         <button class="quantity-btn" onclick="updateQty(${idx},-1)">-</button>${item.quantity}
         <button class="quantity-btn" onclick="updateQty(${idx},1)">+</button>
       </td>
-      <td>$${subtotal.toFixed(2)}</td>
-      <td><span class="remove-btn" onclick="removeItem(${idx})">X</span></td>
+      <td data-label="Subtotal">$${subtotal.toFixed(2)}</td>
+      <td data-label="Remove"><span class="remove-btn" onclick="removeItem(${idx})">X</span></td>
     `;
     tbody.appendChild(tr);
   });
@@ -100,25 +179,14 @@ function renderCart(){
   updateCartCount();
 }
 
-function updateQty(idx,change){ 
-  cart[idx].quantity+=change; 
-  if(cart[idx].quantity<=0) removeItem(idx); 
-  localStorage.setItem("cart",JSON.stringify(cart)); 
-  renderCart(); 
-}
-function removeItem(idx){ 
-  cart.splice(idx,1); 
-  localStorage.setItem("cart",JSON.stringify(cart)); 
-  renderCart(); 
-}
-function updateCartCount(){ 
-  const total=cart.reduce((sum,i)=>sum+i.quantity,0); 
-  const c=document.getElementById("cart-count"); 
-  if(c)c.textContent=total; 
-}
+function updateQty(idx,change){ cart[idx].quantity+=change; if(cart[idx].quantity<=0) removeItem(idx); localStorage.setItem("cart",JSON.stringify(cart)); renderCart(); }
+function removeItem(idx){ cart.splice(idx,1); localStorage.setItem("cart",JSON.stringify(cart)); renderCart(); }
+
+function updateCartCount(){ const total=cart.reduce((sum,i)=>sum+i.quantity,0); const c=document.getElementById("cart-count"); if(c)c.textContent=total; }
 
 renderCart();
 
+// Checkout button
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   if(cart.length===0){ alert("Your cart is empty!"); return; }
   try {
@@ -135,6 +203,5 @@ document.getElementById("checkout-btn").addEventListener("click", async () => {
   }
 });
 </script>
-
 </body>
 </html>
