Update cart page: larger images on desktop

--- a/cart.html
+++ b/cart.html
@@ -113,6 +113,12 @@ th, td {
   margin-left: auto;
 }
 
+/* 🔹 Product images base size */
+#cart-table img {
+  width: 40px;
+  height: 40px;
+}
+
 /* 🔹 Desktop enhancements */
 @media (min-width: 768px){
   .logo { font-size: 1.2rem; }
@@ -121,6 +127,12 @@ th, td {
   .quantity-btn { font-size: 12px; padding: 4px 8px; }
   .checkout-btn { font-size: 16px; padding: 10px 20px; }
   .container { max-width: 800px; margin: auto; }
+
+  /* make images larger on desktop */
+  #cart-table img {
+    width: 80px;
+    height: 80px;
+  }
 }
 </style>
 </head>
